<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="32dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/loginTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/login"
                android:textColor="@android:color/black"
                android:fontFamily="sans-serif-medium"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Email"
                android:gravity="center"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:layout_marginTop="12dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Password"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_marginTop="12dp"
                android:padding="12dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/passwordReqText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password_req"
                android:gravity="center"
                android:fontFamily="sans-serif"
                android:textColor="@android:color/black"
                android:textSize="11sp"/>

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_marginTop="24dp"
                android:backgroundTint="#1565C0"
                android:textColor="@android:color/white"
                android:padding="12dp"
                android:textSize="16sp"/>


            <Button
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/register"
                android:backgroundTint="#1565C0"
                android:padding="12dp"
                android:textColor="@android:color/white"
                android:textSize="16sp"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>